# haskell-university-course

./: README.md
lab1/: lab1.cabal
lab1/app/: CRUDOperations.hs  DatabaseConnection.hs  Entities.hs  Main.hs
lab1/db/: init.sql
lab1/src/: CRUDOperations.hs  DatabaseConnection.hs  Entities.hs
lab2/: ParallelDijkstra.hs  lab2.cabal
lab2/app/: ParallelDijkstra.hs
tasks/: 1.hs  3.hs  4.hs  6.hs  8.hs
tasks/1/: x1.cabal
tasks/1/app/: KnightMoves.hs
tasks/2/: x2.cabal
tasks/2/app/: MLPBackprop.hs
tasks/3/: x3.cabal
tasks/3/app/: TravelingSalesmanProblem.hs
tasks/4/: x4.cabal
tasks/4/app/: DFS.hs
tasks/5/: ClientNetwork.hs  GUIBridge.hs  x5.cabal
tasks/5/app/: ChatApp.hs
tasks/6/: x6.cabal
tasks/6/app/: XML_DTD_Generator.hs
tasks/7/: BallCollision.hs  stack.yaml  x7.cabal
tasks/7/app/: BallCollision.hs
tasks/8/: x8.cabal
tasks/8/app/: SecretGIF.hs
